<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="26dp">


        <CheckBox
            android:id="@+id/tv_drugcycle_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/monday"
            android:clickable="true"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:textColor="@color/black_33"
            android:textSize="20sp"/>


        <CheckBox
            android:id="@+id/tv_drugcycle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@null"
            android:text="@string/tue"
            android:clickable="true"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:textColor="@color/black_33"
            android:textSize="20sp"/>


        <CheckBox
            android:id="@+id/tv_drugcycle_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@null"
            android:text="@string/wed"
            android:clickable="true"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:textColor="@color/black_33"
            android:textSize="20sp"/>


        <CheckBox
            android:id="@+id/tv_drugcycle_4"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@null"
            android:text="@string/thur"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:textColor="@color/black_33"
            android:textSize="20sp"/>


        <CheckBox
            android:id="@+id/tv_drugcycle_5"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@null"
            android:text="@string/fri"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:textColor="@color/black_33"
            android:textSize="20sp"/>


        <CheckBox
            android:id="@+id/tv_drugcycle_6"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@null"
            android:text="@string/sat"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:textColor="@color/black_33"
            android:textSize="20sp"/>


        <CheckBox
            android:id="@+id/tv_drugcycle_7"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@null"
            android:text="@string/sun"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:textColor="@color/black_33"
            android:textSize="20sp"/>


    </LinearLayout>
